Create container divs

--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
   </head>
 
   <body>
-    
+    <div id="global-controls">
+    </div>
+
+    <div id="middle-container">
+      <div id="sound-controls">
+      </div>
+
+      <div id="sound-board">
+      </div>
+
+      <div id="sample-controls">
+      </div>
+    </div>
+
+    <div id="export-controls">
+    </div>
 
     <script src="script.js"></script>
   </body>
