Style container sizes

--- a/index.html
+++ b/index.html
@@ -8,20 +8,25 @@
 
   <body>
     <div id="global-controls">
+      Content
     </div>
 
     <div id="middle-container">
       <div id="sound-controls">
+        Content
       </div>
 
       <div id="sound-board">
+        Content
       </div>
 
       <div id="sample-controls">
+        Content
       </div>
     </div>
 
     <div id="export-controls">
+      Content
     </div>
 
     <script src="script.js"></script>
