Style sound board

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
 
       <div id="sound-board">
-        Content
+        <div id="board"></div>
       </div>
 
       <div id="sample-controls">
